Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def avg_ju(lista):"
+   ]
   },
   {
    "cell_type": "code",
