Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,7 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def avg_ju(lista):"
+    "def avg_ju(lista):\n",
+    "    total=0\n",
+    "    for i in list"
    ]
   },
   {
