Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,9 @@
    "source": [
     "def avg_ju(lista):\n",
     "    total=0\n",
-    "    for i in list"
+    "    for i in lista:\n",
+    "        total=total+i\n",
+    "        r"
    ]
   },
   {
