Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
     "    total=0\n",
     "    for i in lista:\n",
     "        total=total+i\n",
-    "    "
+    "    return "
    ]
   },
   {
