Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,15 @@
     "    for i in lista:\n",
     "        total=total+i\n",
     "    return total/len(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_ju(li)"
    ]
   },
   {
