--- a/index.ipynb
+++ b/index.ipynb
@@ -45,6 +45,7 @@
     "    total=0\n",
     "    for i in lista:\n",
     "        total=total+i\n",
+    "    for j i\n",
     "    return total/len(lista)"
    ]
   },
