Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,8 @@
     "    total=0\n",
     "    for i in lista:\n",
     "        total=total+i\n",
-    "    for j i\n",
+    "    coun\n",
+    "    for j in lista\n",
     "    return total/len(lista)"
    ]
   },
