Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,8 +45,10 @@
     "    total=0\n",
     "    for i in lista:\n",
     "        total=total+i\n",
-    "    coun\n",
-    "    for j in lista\n",
+    "        \n",
+    "    count - 0\n",
+    "    for j in lista:\n",
+    "        \n",
     "    return total/len(lista)"
    ]
   },
