Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,9 +46,9 @@
     "    for i in lista:\n",
     "        total=total+i\n",
     "        \n",
-    "    count - 0\n",
+    "    count = 0\n",
     "    for j in lista:\n",
-    "        \n",
+    "        count=count\n",
     "    return total/len(lista)"
    ]
   },
