Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,8 +48,8 @@
     "        \n",
     "    count = 0\n",
     "    for j in lista:\n",
-    "        count=count\n",
-    "    return total/len(lista)"
+    "        count=count+1\n",
+    "    return total/l"
    ]
   },
   {
