--- a/index.ipynb
+++ b/index.ipynb
@@ -54,6 +54,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def avg_ju(lista):\n",
+    "    total=0\n",
+    "    for i in lista:\n",
+    "        total=total+i\n",
+    "        \n",
+    "    count = 0\n",
+    "    for j in lista:\n",
+    "        count=count+1\n",
+    "    return total/count"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
