--- a/index.ipynb
+++ b/index.ipynb
@@ -260,6 +260,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def restaurant_name(restaurant):\n",
     "    "
    ]
