Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(frontier_restaurant)"
+    "list(frontier_restaurant.)"
    ]
   },
   {
