Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,11 +256,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['categories',\n",
+       " 'coordinates',\n",
+       " 'display_phone',\n",
+       " 'distance',\n",
+       " 'id',\n",
+       " 'image_url',\n",
+       " 'is_closed',\n",
+       " 'location',\n",
+       " 'name',\n",
+       " 'phone',\n",
+       " 'price',\n",
+       " 'rating',\n",
+       " 'review_count',\n",
+       " 'transactions',\n",
+       " 'url']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list(frontier_restaurant.)"
+    "list(frontier_restaurant.keys())"
    ]
   },
   {
