Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,6 +294,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def restaurant_name(restaurant):\n",
     "    "
    ]
