Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -338,7 +338,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    print()"
+    "    print(list)"
    ]
   },
   {
