Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
     }
    ],
    "source": [
-    "list(frontier_restaurant.values())"
+    "list(frontier_restaurant[5.values())"
    ]
   },
   {
