--- a/index.ipynb
+++ b/index.ipynb
@@ -290,19 +290,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "5",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-55a6e039a5c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfrontier_restaurant\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 5"
-     ]
+     "data": {
+      "text/plain": [
+       "[[{'alias': 'mexican', 'title': 'Mexican'},\n",
+       "  {'alias': 'diners', 'title': 'Diners'},\n",
+       "  {'alias': 'tradamerican', 'title': 'American (Traditional)'}],\n",
+       " {'latitude': 35.0808088832532, 'longitude': -106.619402244687},\n",
+       " '(505) 266-0550',\n",
+       " 4033.6583235266075,\n",
+       " 'frontier-restaurant-albuquerque-2',\n",
+       " 'https://s3-media4.fl.yelpcdn.com/bphoto/M9L2z6-G0NobuDJ6YTh6VA/o.jpg',\n",
+       " False,\n",
+       " {'address1': '2400 Central Ave SE',\n",
+       "  'address2': '',\n",
+       "  'address3': '',\n",
+       "  'city': 'Albuquerque',\n",
+       "  'country': 'US',\n",
+       "  'display_address': ['2400 Central Ave SE', 'Albuquerque, NM 87106'],\n",
+       "  'state': 'NM',\n",
+       "  'zip_code': '87106'},\n",
+       " 'Frontier Restaurant',\n",
+       " '+15052660550',\n",
+       " '$',\n",
+       " 4.0,\n",
+       " 1369,\n",
+       " [],\n",
+       " 'https://www.yelp.com/biz/frontier-restaurant-albuquerque-2?adjust_creative=SYc8R4Gowqru5h4SBKZXsQ&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=SYc8R4Gowqru5h4SBKZXsQ']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
