--- a/index.ipynb
+++ b/index.ipynb
@@ -256,36 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['categories',\n",
-       " 'coordinates',\n",
-       " 'display_phone',\n",
-       " 'distance',\n",
-       " 'id',\n",
-       " 'image_url',\n",
-       " 'is_closed',\n",
-       " 'location',\n",
-       " 'name',\n",
-       " 'phone',\n",
-       " 'price',\n",
-       " 'rating',\n",
-       " 'review_count',\n",
-       " 'transactions',\n",
-       " 'url']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-fe95825be3d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfrontier_restaurant\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
     }
    ],
    "source": [
-    "list(frontier_restaurant.keys())"
+    "list(frontier_restaurant[0].keys())"
    ]
   },
   {
