Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rest_name=frontier_restaurant."
+    "rest_name=frontier_restaurant.keys()"
    ]
   },
   {
