--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    print(list)"
+    "    return rest"
    ]
   },
   {
