--- a/index.ipynb
+++ b/index.ipynb
@@ -478,7 +478,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if restaurant['rating'] > a"
+    "    if restaurant['rating'] > alternative"
    ]
   },
   {
