Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -479,6 +479,9 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']\n",
+    "    True\n",
+    "    False\n",
+    "    \n",
     "    "
    ]
   },
