Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -479,7 +479,7 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']\n",
-    "    True\n",
+    "        return True\n",
     "    False\n",
     "    \n",
     "    "
