--- a/index.ipynb
+++ b/index.ipynb
@@ -473,14 +473,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-27-1c62bfe4ad1f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-1c62bfe4ad1f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if restaurant['rating'] > alternative['rating']\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if restaurant['rating'] > alternative['rating']\n",
+    "    if restaurant['rating'] > alternative['rating']:\n",
     "        return True\n",
-    "    False\n",
+    "    return False\n",
     "    \n",
     "    "
    ]
