--- a/index.ipynb
+++ b/index.ipynb
@@ -566,7 +566,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if resta"
+    "    if restaurant['p]"
    ]
   },
   {
