--- a/index.ipynb
+++ b/index.ipynb
@@ -566,7 +566,9 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if restaurant['price'] < alter"
+    "    if restaurant['price'] < alternative['price']\n",
+    "        return True\n",
+    "    "
    ]
   },
   {
