--- a/index.ipynb
+++ b/index.ipynb
@@ -566,7 +566,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if restaurant['price'] < alternative['price']:\n",
+    "    if len(restaurant['price']) < len(alternative['price']:\n",
     "        return True\n",
     "    return False"
    ]
