Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -645,7 +645,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if r"
+    "    if restaurant['rating']>= rating:\n",
+    "        "
    ]
   },
   {
